plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.4.1'
}

group = 'team.starm'
version = project.version

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    // FAWE and WorldEdit APIs
    maven { url = 'https://maven.enginehub.org/repo/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:26.1.2-R0.1-SNAPSHOT'

    // Adventure（部分序列化模块需要显式声明）
    compileOnly 'net.kyori:adventure-text-serializer-legacy:4.19.0'

    // Gson（运行时服务器自带，编译时需要）
    compileOnly 'com.google.code.gson:gson:2.11.0'

    // SQLite JDBC 驱动（编译时需要，运行时服务器自带）
    compileOnly 'org.xerial:sqlite-jdbc:3.46.1.0'

    // WorldEdit API（可选，运行时需要 WorldEdit 或 FAWE 插件）
    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.4.2'

    // PlaceholderAPI
    compileOnly 'me.clip:placeholderapi:2.11.6'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-Xlint:all')
}

def projectVersion = version
processResources {
    filesMatching('plugin.yml') {
        expand 'version': projectVersion
    }

    // 包含schematics文件夹中的所有文件
    from('src/main/resources') {
        include 'schematics/**'
        duplicatesStrategy = 'INCLUDE'
    }
}

build {
    dependsOn shadowJar
}